# currency-converter

./: .dockerignore  .gitignore  README.md  docker-compose.yml  dockerfile.backend  example.env  example_env  pyproject.toml
.github/workflows/: ci.yml
frontend/: dockerfile  index.html  package-lock.json  package.json
frontend/src/: api.js  index.html  main.js  styles.css
src/currency_converter/: config.py  main.py
src/currency_converter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/currency_converter/application/: exceptions.py  ports.py  use_cases.py
src/currency_converter/domain/: models.py  services.py  test_convertions.py
src/currency_converter/infrastructure/: exceptions.py  frankfurter_client.py  rates_provider.py
src/currency_converter/presentation/: api.py  dependencies.py  receipt_pdf.py  schemas.py
tests/: test_convertions.py  test_fastapi.py  test_frankfurter_client.py  test_static_rates_provider.py  tests_application.py
